crates/ryft-macros-tests/tests/parameters/error_bounds.stderr
error: The generic parameter that is bounded by 'Parameter' indicates the parameter type that is used by '#[derive(Parameterized)]' and cannot have any bounds other than the 'Parameter' bound.
 --> tests/parameters/error_bounds.rs:4:35
  |
4 | struct ParameterWithCloneBound<P: Clone + Parameter> {
  |                                   ^^^^^

error: The generic parameter that is bounded by 'Parameter' indicates the parameter type that is used by '#[derive(Parameterized)]' and cannot have any bounds other than the 'Parameter' bound.
  --> tests/parameters/error_bounds.rs:12:42
   |
12 | struct ParameterWithLifetimeBound<'p, P: 'p + Clone + Parameter> {
   |                                          ^^

error: The generic parameter that is bounded by 'Parameter' indicates the parameter type that is used by '#[derive(Parameterized)]' and cannot have any bounds other than the 'Parameter' bound.
  --> tests/parameters/error_bounds.rs:12:47
   |
12 | struct ParameterWithLifetimeBound<'p, P: 'p + Clone + Parameter> {
   |                                               ^^^^^

error: Ryft parameters must be owned. References are not allowed.
  --> tests/parameters/error_bounds.rs:14:22
   |
14 |     parameter_1: (P, &'p P),
   |                      ^^^^^
